@@ -1,6 +1,6 @@
 <% if @project.key_info.present? %>
   <li>
-    <%= link_to(sprited_text('key', 'Download GPG Key'), project_public_key_path(project_name: @project.name)) %>
+    <%= link_to(sprited_text('key', 'GPG Key'), key_dialog_project_public_key_path(project_name: @project.name), remote: true, id: 'gpg-project') %>
   </li>
 <% end %>
 <% if @project.key_info.present? && @project.key_info.ssl_certificate.present? %>
