@@ -1,0 +1,43 @@
+<div class="dialog darkgrey_box">
+  <div class="box box-shadow">
+    <h2 class="box-header"><%= @project.name %> keys</h2>
+    <div class="dialog-content">
+      <table width="95%" style="text-align: center;">
+        <tr>
+          <th>Size</th>
+          <th>Algorithm</th>
+          <th>ID</th>
+          <th>Expires</th>
+          <%- if @project.key_info.origin.present? %>
+            <th>Origin</th>
+          <% end %>
+        </tr>
+        <tr>
+          <td>
+            <%= @project.key_info.keysize %>
+          </td>
+          <td>
+            <%= @project.key_info.algorithm %>
+          </td>
+          <td>
+            <%= @project.key_info.keyid %>
+          </td>
+          <td>
+            <%= DateTime.strptime(@project.key_info.expires ,'%s').strftime('%F') %>
+          </td>
+          <%- if @project.key_info.origin.present? %>
+            <td><%= @project.key_info.origin %></td>
+          <% end %>
+        </tr>
+      </table>
+      <p>
+        <em>Fingerprint</em>:<br>
+        <%= @project.key_info.fingerprint %>
+      </p>
+      <div class="dialog-buttons">
+        <%= link_to('Download', project_public_key_path(project_name: @project.name), class: 'close-dialog') %>
+        <%= remove_dialog_tag('Close') %>
+      </div>
+    </div>
+  </div>
+</div>
