@@ -31,6 +31,7 @@ UI:
  * Kerberos authentication mode. Allow OBS admins to setup their instance for
    kerberos authentication. Read more in the OBS Admin Guide.
  * Users can see the job history list of a specific package via the package binaries page
+ * New GPG key details dialog
 
 API:
  * Kerberos authentication mode
